; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_setfilter.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_setfilter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_NOSUB = common dso_local global i32 0, align 4
@REG_EXTENDED = common dso_local global i32 0, align 4
@REG_ICASE = common dso_local global i32 0, align 4
@xlines = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"regex error: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @setfilter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setfilter(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* @REG_NOSUB, align 4
  %9 = load i32, i32* @REG_EXTENDED, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @REG_ICASE, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @regcomp(i32* %6, i8* %7, i32 %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %30

19:                                               ; preds = %16
  %20 = load i8*, i8** %4, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 0
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load i64, i64* @xlines, align 8
  %27 = sub nsw i64 %26, 1
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @mvprintw(i64 %27, i32 0, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %25, %19, %16, %2
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @regcomp(i32*, i8*, i32) #1

declare dso_local i32 @mvprintw(i64, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
